Try possible fix for back-to-top-button on mobile devices

--- a/src/app/shared/components/back-to-top-button/back-to-top-button.component.scss
+++ b/src/app/shared/components/back-to-top-button/back-to-top-button.component.scss
@@ -30,10 +30,11 @@
 
     @media (max-width: map-get($breakpoints, "sm")) {
         right: $spacing-md;
+        bottom: $mobile-nav-height + 24px;
 
         // Only apply bottom padding if there's a bottom bar
         @supports (padding-bottom: env(safe-area-inset-bottom)) {
-            bottom: min($mobile-nav-height + 20px + env(safe-area-inset-bottom), $mobile-nav-height + 20px);
+            bottom: min($mobile-nav-height + 24px + env(safe-area-inset-bottom), $mobile-nav-height + 24px);
         }
 
         // For Android devices with bottom navigation bar
